Modified index.html and style.css

--- a/index.html
+++ b/index.html
@@ -10,16 +10,20 @@
 <body>
     <div class="wrapper">
         <div class="animate-h2">
-            <h2>Not so long ago at a Tech campus very close by....</h2>
+            <h2>Not so long ago at a Tech campus very, very close by....</h2>
         </div>
-        <div class="animate-becode">
+        <div class="logo">
             <img src="becode.png" alt="BeCode">
         </div>
         <div class="animate-text">
             <div class="title">
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut temporibus reprehenderit cupiditate, animi veniam enim quae iure. Asperiores voluptatem voluptate ducimus nisi repellat alias soluta doloribus. Illum odio, aut modi ex corporis ab beatae nostrum tempora, alias reiciendis quasi placeat consectetur minus. Ut inventore enim molestiae, natus vero nobis fuga iusto provident sit dolorem, autem optio corrupti totam rem consectetur. Voluptatibus, consequuntur rerum, voluptatem assumenda architecto vero error vel incidunt expedita ducimus aperiam cupiditate molestiae facilis harum obcaecati voluptatum nemo ratione, in eos officiis neque culpa sunt. In odit asperiores libero soluta possimus quos optio porro ducimus vitae cumque. Consectetur laudantium vitae possimus quos fugit, nihil magnam perspiciatis beatae illum vero doloremque ab inventore nisi, sit doloribus autem deserunt commodi, blanditiis quam dolor soluta officia! Ad, non deserunt voluptate nam asperiores aperiam, officia natus dolore possimus porro, harum in sequi iure quibusdam? Aperiam totam exercitationem mollitia beatae, maxime veniam! Perspiciatis maiores odio nam praesentium ducimus eveniet iusto ad dolor quis quisquam porro, sapiente, quo officia voluptatem fugit quasi magnam excepturi! Non, ad. Laboriosam architecto ducimus, laudantium sunt nesciunt harum error quasi temporibus quas quia praesentium minima neque, officia optio culpa nemo. Illo aliquam qui, dolor maiores, expedita error modi ducimus aut recusandae repudiandae quam eligendi earum. Deleniti ratione minima, ducimus qui est fuga adipisci cum, consectetur provident quo eveniet. Labore tempora, cumque mollitia tenetur corrupti corporis nulla! Asperiores natus nostrum, velit illum id amet rerum deserunt unde deleniti nulla hic totam ipsam voluptatum illo eius ex consectetur obcaecati minus maxime.
-                </p>
+                <p class="titles">Episode XIII</p>
+                <p class="titles">THE KEYFRAME MENACE</p>
+                <p>Trouble at T2 Campus. A new week brought yet another assignment. This time about CSS animations.</p>
+                <p>Our heroes of Holberton are struggling. The keyframes are strong and the amount of worstenbroodjes too small.</p>
+                <p>The old structures of knowledge, CV and VCard, have fallen. There is no room for escape, only to fight.</p>
+                <p>The coding padawans must trust in their newly gained powers and venture through the remaining challenges. Once they have succeeded, they can climb the hill of Waterschei. By doing so they can drop the ring into Mordor... Or... Whatever... I'm losing the point here.</p>
+                <p>Is the Coding Force strong enough with these ones to withstand the temptations of the mighty Ctrl+C and Ctrl+V....</p>
             </div>
         </div>
     </div>
